Prepare Django settings for Render deployment

--- a/recipes/templates/recipes/list.html
+++ b/recipes/templates/recipes/list.html
@@ -62,7 +62,7 @@
         font-family: "Pacifico", cursive;
         font-size: 42px;
         text-align: center;
-        color: #ffd700; /* yellow */
+        color: #ffd700; 
         margin: 30px auto 40px;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
       }
