Fix template error: removed unused slugify load

--- a/recipes/templates/recipes/list.html
+++ b/recipes/templates/recipes/list.html
@@ -3,7 +3,7 @@
   <head>
     <title>Recipes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% load static %} {% load slugify %}
+    {% load static %} 
 
     <!-- Fonts to match login page -->
     <link
